--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,6 +9,11 @@ on:
 jobs:
   scribe-report-test:
     runs-on: ubuntu-latest
+    permissions:
+#      contents: read
+#      packages: write
+     id-token: write
+     
     steps:
 
       - uses: actions/checkout@v2
