--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,7 @@ jobs:
         with:
            type: dir
            target: 'mongo-express-scm'
-           format: attest
+#            format: attest
            scribe-enable: true
            scribe-client-id: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_ID }}
            scribe-client-secret: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_SECRET }}
@@ -45,7 +45,7 @@ jobs:
         uses: scribe-security/action-bom@master
         with:
           type: docker # To be included only if you want to to use docker daemon to access the image (for example, creating your docker image locally)
-          target: mongo-express:0.54
+          target: mongo-express:0.49
 #           format: json
           format: attest
           scribe-enable: true
@@ -63,7 +63,7 @@ jobs:
         id: valint_slsa_statement
         uses: scribe-security/action-bom@master
         with:
-          target: mongo-express:0.54
+          target: mongo-express:0.49
 #           format: statement-slsa
           format: attest-slsa
           force: true
