--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,7 +36,7 @@ jobs:
            scribe-enable: true
            scribe-client-id: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_ID }}
            scribe-client-secret: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_SECRET }}
-           product-key: "test 1"
+           product-key: "attest test1"
 
 
       # Build and push your image - this example skips this step as we're using the published mongo express.
@@ -47,12 +47,12 @@ jobs:
         with:
           type: docker # To be included only if you want to to use docker daemon to access the image (for example, creating your docker image locally)
           target: mongo-express:latest
-          format: json
+          format: attest-cyclonedx-json
 #           format: attest
           scribe-enable: true
           scribe-client-id: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_ID }}
           scribe-client-secret: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_SECRET }}
-          product-key: "test 1"
+          product-key: "attest test 1"
 
       - uses: actions/upload-artifact@v2
         with:
