--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -47,7 +47,7 @@ jobs:
         uses: scribe-security/action-bom@master
         with:
           type: docker # To be included only if you want to to use docker daemon to access the image (for example, creating your docker image locally)
-          target: mongo-express:latest
+          target: mongo-express:0.49
           format: statement
 #           format: attest
           scribe-enable: true
@@ -66,7 +66,7 @@ jobs:
         id: valint_slsa_statement
         uses: scribe-security/action-bom@master
         with:
-          target: mongo-express:latest
+          target: mongo-express:0.49
           format: statement-slsa
 #           format: attest-slsa
           force: true
