--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,10 +34,13 @@ jobs:
            target: 'mongo-express-scm'
            format: statement
 #            format: attest
-           scribe-enable: true
-           scribe-client-id: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_ID }}
-           scribe-client-secret: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_SECRET }}
-           product-key: "statement1"
+#            scribe-enable: true
+#            scribe-client-id: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_ID }}
+#            scribe-client-secret: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_SECRET }}
+#            product-key: "statement1"
+           scribe-client-id: cw24EwmteaxoC6GKhs7j3OLObqD7ExEk
+           scribe-client-secret: YEb68hluwX0oizSVmZYXcIcbS5DQLrWson0vlmOMcSp7TQdewrKGxSZ1dzqNpx_H
+           product-key: "00 DEMO test"
 
 
       # Build and push your image - this example skips this step as we're using the published mongo express.
@@ -51,9 +54,12 @@ jobs:
           format: statement
 #           format: attest
           scribe-enable: true
-          scribe-client-id: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_ID }}
-          scribe-client-secret: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_SECRET }}
-          product-key: "statement1"
+#           scribe-client-id: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_ID }}
+#           scribe-client-secret: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_SECRET }}
+#           product-key: "statement1"
+          scribe-client-id: cw24EwmteaxoC6GKhs7j3OLObqD7ExEk
+          scribe-client-secret: YEb68hluwX0oizSVmZYXcIcbS5DQLrWson0vlmOMcSp7TQdewrKGxSZ1dzqNpx_H
+          product-key: "00 DEMO test"
 
       - uses: actions/upload-artifact@v2
         with:
