--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,8 +38,8 @@ jobs:
 #            scribe-client-id: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_ID }}
 #            scribe-client-secret: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_SECRET }}
 #            product-key: "statement1"
-           scribe-client-id: cw24EwmteaxoC6GKhs7j3OLObqD7ExEk
-           scribe-client-secret: YEb68hluwX0oizSVmZYXcIcbS5DQLrWson0vlmOMcSp7TQdewrKGxSZ1dzqNpx_H
+           scribe-client-id: ${{ secrets.SCRIBE_PROD_TEST_CLIENT_ID }}
+           scribe-client-secret: ${{ secrets.SCRIBE_PROD_TEST_CLIENT_SECRET }}
            product-key: "00 DEMO test"
 
 
@@ -57,8 +57,8 @@ jobs:
 #           scribe-client-id: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_ID }}
 #           scribe-client-secret: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_SECRET }}
 #           product-key: "statement1"
-          scribe-client-id: cw24EwmteaxoC6GKhs7j3OLObqD7ExEk
-          scribe-client-secret: YEb68hluwX0oizSVmZYXcIcbS5DQLrWson0vlmOMcSp7TQdewrKGxSZ1dzqNpx_H
+          scribe-client-id: ${{ secrets.SCRIBE_PROD_TEST_CLIENT_ID }}
+          scribe-client-secret: ${{ secrets.SCRIBE_PROD_TEST_CLIENT_SECRET }}
           product-key: "00 DEMO test"
 
       - uses: actions/upload-artifact@v2
