--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: PROD VALINT
+name: PROD VALINT DEMO
 
 on: 
     push:
@@ -40,7 +40,7 @@ jobs:
 #            product-key: "statement1"
            scribe-client-id: ${{ secrets.SCRIBE_PROD_TEST_CLIENT_ID }}
            scribe-client-secret: ${{ secrets.SCRIBE_PROD_TEST_CLIENT_SECRET }}
-           product-key: "00 DEMO test"
+           product-key: "00DEMO test"
 
 
       # Build and push your image - this example skips this step as we're using the published mongo express.
@@ -50,7 +50,7 @@ jobs:
         uses: scribe-security/action-bom@master
         with:
           type: docker # To be included only if you want to to use docker daemon to access the image (for example, creating your docker image locally)
-          target: mongo-express:0.49
+          target: mongo-express:0.45
           format: statement
 #           format: attest
           scribe-enable: true
@@ -59,7 +59,7 @@ jobs:
 #           product-key: "statement1"
           scribe-client-id: ${{ secrets.SCRIBE_PROD_TEST_CLIENT_ID }}
           scribe-client-secret: ${{ secrets.SCRIBE_PROD_TEST_CLIENT_SECRET }}
-          product-key: "00 DEMO test"
+          product-key: "00DEMO test"
 
       - uses: actions/upload-artifact@v2
         with:
@@ -72,7 +72,7 @@ jobs:
         id: valint_slsa_statement
         uses: scribe-security/action-bom@master
         with:
-          target: mongo-express:0.49
+          target: mongo-express:0.45
           format: statement-slsa
 #           format: attest-slsa
           force: true
