--- a/.github/workflows/demo_test.yml
+++ b/.github/workflows/demo_test.yml
@@ -50,7 +50,7 @@ jobs:
         uses: scribe-security/action-bom@master
         with:
           type: docker # To be included only if you want to to use docker daemon to access the image (for example, creating your docker image locally)
-          target: mongo-express:0.54.0
+          target: mongo-express:latest
 #           format: statement
 #           format: attest
           scribe-enable: true
@@ -72,7 +72,7 @@ jobs:
         id: valint_slsa_statement
         uses: scribe-security/action-bom@master
         with:
-          target: mongo-express:0.54.0
+          target: mongo-express:latest
           format: statement-slsa
 #           format: attest-slsa
           force: true
