--- a/.github/workflows/demo_test.yml
+++ b/.github/workflows/demo_test.yml
@@ -3,7 +3,7 @@
 name: PROD VALINT DEMO
 
 on: 
-    push:
+#     push:
     workflow_dispatch:
 
 jobs:
@@ -35,12 +35,13 @@ jobs:
 #            format: statement
 #            format: attest
 #            scribe-enable: true
+           scribe-client-id: 1GZdxyDtDKe4KrblpHM2ivBa18TgTZyu
+           scribe-client-secret: 49vdz1sXqkaTYOHB17uOhD60ToHbGYrPBoNeh6Lh2MsL0NYywwHX7aLOZuL1Lspd
+#            product-key: "statement1"
 #            scribe-client-id: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_ID }}
 #            scribe-client-secret: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_SECRET }}
-#            product-key: "statement1"
-           scribe-client-id: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_ID }}
-           scribe-client-secret: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_SECRET }}
-           product-key: "00DEMO test"
+#            product-key: "00DEMO test"
+           product-key: 2bee896c-cadd-46f9-bf42-b0e003825992
 
 
       # Build and push your image - this example skips this step as we're using the published mongo express.
@@ -50,16 +51,17 @@ jobs:
         uses: scribe-security/action-bom@master
         with:
           type: docker # To be included only if you want to to use docker daemon to access the image (for example, creating your docker image locally)
-          target: mongo-express:latest
+          target: mongo-express:0.49.0
 #           format: statement
 #           format: attest
           scribe-enable: true
+          scribe-client-id: 1GZdxyDtDKe4KrblpHM2ivBa18TgTZyu
+          scribe-client-secret: 49vdz1sXqkaTYOHB17uOhD60ToHbGYrPBoNeh6Lh2MsL0NYywwHX7aLOZuL1Lspd
+#           product-key: "statement1"
 #           scribe-client-id: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_ID }}
 #           scribe-client-secret: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_SECRET }}
-#           product-key: "statement1"
-          scribe-client-id: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_ID }}
-          scribe-client-secret: ${{ secrets.SCRIBE_PROD_DEMO_CLIENT_SECRET }}
-          product-key: "00DEMO test"
+#           product-key: "00DEMO test"
+          product-key: 2bee896c-cadd-46f9-bf42-b0e003825992
 
       - uses: actions/upload-artifact@v2
         with:
@@ -72,10 +74,11 @@ jobs:
         id: valint_slsa_statement
         uses: scribe-security/action-bom@master
         with:
-          target: mongo-express:latest
+          target: mongo-express:0.49.0
           format: statement-slsa
 #           format: attest-slsa
           force: true
+          product-key: 2bee896c-cadd-46f9-bf42-b0e003825992
 
       - uses: actions/upload-artifact@v2
         with:
