--- a/.github/workflows/stg_demo_test.yml
+++ b/.github/workflows/stg_demo_test.yml
@@ -41,7 +41,7 @@ jobs:
            scribe-enable: true
            scribe-client-id: 1GZdxyDtDKe4KrblpHM2ivBa18TgTZyu
            scribe-client-secret: 49vdz1sXqkaTYOHB17uOhD60ToHbGYrPBoNeh6Lh2MsL0NYywwHX7aLOZuL1Lspd
-           product-key: 2bee896c-cadd-46f9-bf42-b0e003825992
+           product-key: "Demo_test_Alona"
            scribe-url: ${{ env.SCRIBE_URL }}
            scribe-login-url: ${{ env.SCRIBE_LOGIN_URL }}
            scribe-audience: ${{ env.SCRIBE_AUDIENCE }}
@@ -56,9 +56,10 @@ jobs:
           type: docker # To be included only if you want to to use docker daemon to access the image (for example, creating your docker image locally)
           target: mongo-express:0.49.0
           scribe-enable: true
+          format: attest-cyclonedx-json
           scribe-client-id: 1GZdxyDtDKe4KrblpHM2ivBa18TgTZyu
           scribe-client-secret: 49vdz1sXqkaTYOHB17uOhD60ToHbGYrPBoNeh6Lh2MsL0NYywwHX7aLOZuL1Lspd
-          product-key: 2bee896c-cadd-46f9-bf42-b0e003825992
+          product-key: "Demo_test_Alona"
           scribe-url: ${{ env.SCRIBE_URL }}
           scribe-login-url: ${{ env.SCRIBE_LOGIN_URL }}
           scribe-audience: ${{ env.SCRIBE_AUDIENCE }}
@@ -77,7 +78,7 @@ jobs:
           target: mongo-express:0.49.0
           format: statement-slsa
           force: true
-          product-key: 2bee896c-cadd-46f9-bf42-b0e003825992
+          product-key: "Demo_test_Alona"
 
       - uses: actions/upload-artifact@v2
         with:
