--- a/.github/workflows/stg_demo_test.yml
+++ b/.github/workflows/stg_demo_test.yml
@@ -54,9 +54,9 @@ jobs:
         uses: scribe-security/action-bom@master
         with:
           type: docker # To be included only if you want to to use docker daemon to access the image (for example, creating your docker image locally)
-          target: mongo-express:0.49.0
+          target: mongo-express:0.54.0
           scribe-enable: true
-          format: attest-cyclonedx-json
+#           format: attest-cyclonedx-json
           scribe-client-id: 1GZdxyDtDKe4KrblpHM2ivBa18TgTZyu
           scribe-client-secret: 49vdz1sXqkaTYOHB17uOhD60ToHbGYrPBoNeh6Lh2MsL0NYywwHX7aLOZuL1Lspd
           product-key: "Demo_test_Alona"
@@ -75,7 +75,7 @@ jobs:
         id: valint_slsa_statement
         uses: scribe-security/action-bom@master
         with:
-          target: mongo-express:0.49.0
+          target: mongo-express:0.54.0
           format: statement-slsa
           force: true
           product-key: "Demo_test_Alona"
