--- a/.github/workflows/dev_new_env.yml
+++ b/.github/workflows/dev_new_env.yml
@@ -27,19 +27,19 @@ jobs:
           ref: refs/tags/v1.0.0-alpha.4
           path: mongo-express-scm
 
-#       - name: Scm generate bom, upload to scribe
-#         id: valint_bom_scm
-#         uses: scribe-security/action-bom@master
-#         with:
-#            type: dir
-#            target: 'mongo-express-scm'
-#            scribe-enable: true
-#            scribe-client-id: 1FcCB0ywsJ9LCHC3Nt0P4kyRrTvzenZ8
-#            scribe-client-secret: TsVsLJXmSAog3eTZvIwEjkk0xoUmp4FhOTfx-elWQ0kiH8CyY5xkP8UqWaPqht-_
-#            product-key: "Demo_test_Alona"
-#            scribe-url: ${{ env.SCRIBE_URL }}
-#            scribe-login-url: ${{ env.SCRIBE_LOGIN_URL }}
-#            scribe-audience: ${{ env.SCRIBE_AUDIENCE }}
+      - name: Scm generate bom, upload to scribe
+        id: valint_bom_scm
+        uses: scribe-security/action-bom@master
+        with:
+           type: dir
+           target: 'mongo-express-scm'
+           scribe-enable: true
+           scribe-client-id: 1FcCB0ywsJ9LCHC3Nt0P4kyRrTvzenZ8
+           scribe-client-secret: TsVsLJXmSAog3eTZvIwEjkk0xoUmp4FhOTfx-elWQ0kiH8CyY5xkP8UqWaPqht-_
+           product-key: "Demo_Product"
+           scribe-url: ${{ env.SCRIBE_URL }}
+           scribe-login-url: ${{ env.SCRIBE_LOGIN_URL }}
+           scribe-audience: ${{ env.SCRIBE_AUDIENCE }}
 
 
       # Build and push your image - this example skips this step as we're using the published mongo express.
@@ -51,10 +51,10 @@ jobs:
           type: docker # To be included only if you want to to use docker daemon to access the image (for example, creating your docker image locally)
           target: mongo-express:0.45
           scribe-enable: true
-          format: attest-cyclonedx-json
+#           format: attest-cyclonedx-json
           scribe-client-id: 1FcCB0ywsJ9LCHC3Nt0P4kyRrTvzenZ8
           scribe-client-secret: TsVsLJXmSAog3eTZvIwEjkk0xoUmp4FhOTfx-elWQ0kiH8CyY5xkP8UqWaPqht-_
-          product-key: "Demo_test_Alona"
+          product-key: "Demo_Product"
           scribe-url: ${{ env.SCRIBE_URL }}
           scribe-login-url: ${{ env.SCRIBE_LOGIN_URL }}
           scribe-audience: ${{ env.SCRIBE_AUDIENCE }}
@@ -73,7 +73,7 @@ jobs:
           target: mongo-express:0.45
           format: statement-slsa
           force: true
-          product-key: "Demo_test_Alona"
+          product-key: "Demo_Product"
 
       - uses: actions/upload-artifact@v2
         with:
