--- a/.github/workflows/stg_new_env_demo.yml
+++ b/.github/workflows/stg_new_env_demo.yml
@@ -54,7 +54,7 @@ jobs:
         uses: scribe-security/action-bom@master
         with:
           type: docker # To be included only if you want to to use docker daemon to access the image (for example, creating your docker image locally)
-          target: mongo-express:1.0.0-alpha.4
+          target: mongo-express:0.54
           scribe-enable: true
           format: attest-cyclonedx-json
           scribe-client-id: 85IIjVsAUBCfAnPaM8tDvEszeyAcGSfU
@@ -75,7 +75,7 @@ jobs:
         id: valint_slsa_statement
         uses: scribe-security/action-bom@master
         with:
-          target: mongo-express:1.0.0-alpha.4
+          target: mongo-express:0.54
           format: statement-slsa
           force: true
           product-key: "Demo_Product"
